# pico-extras-usb-msc-virtual-disk

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  pico-extras-usb-msc-bootrom-partitions.code-workspacea.code-workspace  picovd.c  picovd_config.h  tusb_config.h
.devcontainer/: Dockerfile
.github/workflows/: pico.yml
doc/: ExFAT-design.md  FAT16-design.md
src/: CMakeLists.txt  stdio_ring_buffer.c  stdio_ring_buffer.h  vd_exfat.h  vd_exfat_consts.cpp  vd_exfat_directory.c  vd_exfat_dirs.cpp  vd_exfat_dirs.h  vd_exfat_params.h  vd_files_changing.c  vd_files_rp2350.c  vd_files_rp2350.h  vd_files_stdout.c  vd_files_stdout.h  vd_usb_msc_cb.c  vd_virtual_disk.c  vd_virtual_disk.h
tests/: conftest.py  device_finder.py  exfat_params.py  exfat_utils.py  memfootprint.py  test_exfat_alloc_bitmap_first.py  test_exfat_bootsector.py  test_exfat_fat_sector_first.py  test_exfat_root_dir_entries_first.py  test_exfat_root_dir_file_entry_sets.py  test_exfat_sector_11.py  test_exfat_sectors_1-10.py  test_exfat_upcase_table_checksum.py  test_exfat_upcase_table_first.py  test_msc_scsi_read_only.py  test_partition_table_picotool.json
tools/: ncat.c
